--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: PLTea
+logo: /assets/img/logo.jpg
+description:
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
+twitter_url: https://twitter.com/PLteaforplt
+google_group_url: https://groups.google.com/g/pltea
+slack_url: https://t.co/clxVUPEkPm?amp=1
