Fix CSR Slack link

--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ google_analytics:
 theme: jekyll-theme-minimal
 twitter_url: https://twitter.com/PLteaforplt
 google_group_url: https://groups.google.com/g/pltea
-slack_url: https://t.co/clxVUPEkPm?amp=1
+slack_url: http://bit.ly/join-systems-slack-2019
