Add Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: PLTea
 logo: /assets/img/logo.jpg
 description:
 show_downloads: true
-google_analytics:
+google_analytics: G-946LMGMJE1
 theme: jekyll-theme-minimal
 twitter_url: https://twitter.com/PLteaforplt
 google_group_url: https://groups.google.com/g/pltea
