Rachit's new website

--- a/_data/members.yaml
+++ b/_data/members.yaml
@@ -15,7 +15,7 @@
 
 - name: Rachit Nigam
   photo: /assets/img/rachit.jpg
-  website: https://rachitnigam.com/
+  website: https://rachit.pl/
   active: true
 
 - name: Paulette Koronkevich
